3.3.43	26jan13	Fix for rtlbrowse for gtk_adjustment_get_page_increment and 
		gtk_adjustment_get_step_increment introduced in 2.14. 
		Added VPD support via vpd2vcd.  To use, specify -o
		at the command line.  (e.g., gtkwave -o test.vpd)
		Added autodetect for LXT, LXT2, VZT, FST regardless of the
		filename suffix.
		Crash fix for gtkwave::getDisplayedSignals, specifically
		removing the extra free_2() in WAVE_OE_ME.
		Added conditional compile for stat() being available.
3.3.44	16feb13	gdk_draw_layout assertion `GDK_IS_DRAWABLE (drawable)'
		assertion fix.
3.3.45	28feb13	Fix for VCDNAM_ESCAPE character in treesearch window.  This 
		sometimes occurs for structure identifiers.
3.3.46	29apr13	Upgraded to autoconf 2.69.
		Fixed as of yet undetected hdr_incomplete bug when running off
		end of FST file.  (e.g., while file is being written)
		Fixed problem with is_gtkw_save_file getting wiped out on
		reload.
		Updated Mac bundle info to reflect new autoconf filenames.
3.3.47	14may13	Fix for crash in 64-bit mode with array accesses in
		deprecated loader.
		Partial VCD loader fix for small files.
		Added preliminary do-nothing generate support in vermin.
		Fixed minmax_valid for partial VCD loader: affects scaling
		on floating-point traces.
3.3.48	12jul13	Fixed infinite loop hang on various helpers executables
		when extra arguments are specified.
		Delete changed marker name if it exists when marker is removed.
		Added "Open Hierarchy" option that will expand the SST and
		select the hierarchy for a given signal selected in the
		Signals window.
		Extload fix for generate created hierarchies.
		Extload fix for new debug info output style to be parsed.
		Added generate as scope type to VCD/FST/extload.
		Preliminary add for module port direction for extload and FST.
		Fixed GTK warning when hide_sst is enabled and SST is opened
		then closed.
		Hide signal direction column in SST if all signals are declared
		as FST_VD_IMPLICIT.